[tool.poetry]
name = "agent"
version = "0.1.0"
description = ""
authors = ["Plurigrid <gm@plurigrid.xyz>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
pypdf2 = "^3.0.1"
wandb = "^0.13.10"
unstructured = "^0.4.11"
transformers = "^4.26.1"
gradio = "^3.19.1"
duckdb = "^0.7.0"
pypdf = "^3.4.1"
slugify = "^0.0.1"
clang = "^14.0"
zulip = "^0.8.2"
llama-index = "^0.4.24"
argparse = "^1.4.0"
discord = "^2.2.2"

[tool.poetry.scripts]
agent = "agent.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


